--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
       <div class="info">
         <h4>THARUNESH P</h4>
         <p>192421272</p>
-        <div class="route">KANCHIPURAM-I 9</div>
+        <div class="route">kundrathur 21 D</div>
       </div>
     </div>
   </main>
